--- a/src/components/user_registration_myself_form.css
+++ b/src/components/user_registration_myself_form.css
@@ -1,25 +1,37 @@
 .react-userRegisterForm-myself-grid-container {
-    display: grid;
-    grid-row-gap: 8px;
-    grid-template-columns: auto auto auto;
+	display: grid;
+	grid-row-gap: 8px;
+	grid-template-columns: auto auto auto;
+}
+
+.react-userRegisterForm-myself-register-button {
+	margin-top: 16px;
+	width: 350px;
+	height: 30px;
+	border: none;
+	background: rgb(77, 126, 218);
+	color: white;
+	font-style: italic;
+	font-size: 16px;
+    margin: auto;
 }
 
 .react-userRegisterForm-myself-grid-item8 {
-    grid-column: 3/4;
+	grid-column: 3/4;
 }
 
 .react-userRegisterForm-myself-grid-item9 {
-    grid-column: 1/3;
+	grid-column: 1/3;
 }
 
 .react-userRegisterForm-myself-grid-item11 {
-    grid-column: 1/3;
+	grid-column: 1/3;
 }
 
 .react-userRegisterForm-myself-grid-item12 {
-    grid-column: 3/4;
+	grid-column: 3/4;
 }
 
 .react-userRegisterForm-myself-grid-item13 {
-    grid-column: 3/4;
+	grid-column: 3/4;
 }
