added labels for organization form and updated CSS

--- a/src/components/user_registration_organization_form.css
+++ b/src/components/user_registration_organization_form.css
@@ -1,5 +1,10 @@
+.react-userRegisterForm-organization-grid-format {
+	text-align: left;
+    margin-left: 45px;
+}
+
 .react-userRegisterForm-organization-grid-container {
-    display: grid;
-    grid-row-gap: 8px;
-    grid-template-columns: auto auto auto;
+	display: grid;
+	grid-row-gap: 8px;
+	grid-template-columns: auto auto auto;
 }
