--- a/src/components/user_registration_myself_form.css
+++ b/src/components/user_registration_myself_form.css
@@ -13,14 +13,21 @@
 	color: white;
 	font-style: italic;
 	font-size: 16px;
-    margin: auto;
+	margin: auto;
+	grid-column: 1/4;
 }
 
-.react-userRegisterForm-myself-grid-item8 {
+.react-userRegisterForm-myself-grid-format {
+	text-align: left;
+	margin-left: 45px;
+	margin-right: 0;
+}
+
+/* .react-userRegisterForm-myself-grid-item8 {
 	grid-column: 3/4;
-}
+} */
 
-.react-userRegisterForm-myself-grid-item9 {
+/* .react-userRegisterForm-myself-grid-item9 {
 	grid-column: 1/3;
 }
 
@@ -34,4 +41,4 @@
 
 .react-userRegisterForm-myself-grid-item13 {
 	grid-column: 3/4;
-}
+} */
