--- a/src/components/user_registration_dependent_form.css
+++ b/src/components/user_registration_dependent_form.css
@@ -2,14 +2,14 @@
 .react-userRegisterForm-dependent-myself-grid-container {
 	display: grid;
 	grid-row-gap: 8px;
-	grid-template-columns: auto auto auto;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* this is for the Dependent(s) part */
 .react-userRegisterForm-dependent-grid-container {
 	display: grid;
 	grid-row-gap: 8px;
-	grid-template-columns: auto auto auto;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .react-userRegisterForm-dependent-add-button {
@@ -23,6 +23,7 @@
 	font-size: 16px;
     margin-left: auto;
     margin-right: auto;
+	grid-column: 1/4;
 }
 
 /* this is the button for registering accounts for both myself and dependent(s) */
@@ -52,4 +53,16 @@
 	text-align: left;
 	margin-left: 45px;
 	margin-right: 0;
+}
+
+.react-userRegisterForm-dependent-remove-button {
+	margin-top: 20px;
+	text-align: left;
+	margin-left: 45px;
+}
+
+.react-userRegisterForm-dependent-remove-button button {
+	background-color: white;
+	color: red;
+	border: 1px solid red;
 }
