--- a/src/components/user_registration_organization_form.css
+++ b/src/components/user_registration_organization_form.css
@@ -1,6 +1,6 @@
 .react-userRegisterForm-organization-grid-format {
 	text-align: left;
-    margin-left: 45px;
+	margin-left: 45px;
 }
 
 .react-userRegisterForm-organization-grid-container {
@@ -17,6 +17,18 @@
 	color: white;
 	font-style: italic;
 	font-size: 16px;
-    margin: auto;
-    grid-column: 1/4;
+	margin: auto;
+	grid-column: 1/4;
+}
+
+.react-userRegisterForm-organization-myself-grid-container {
+	display: grid;
+	grid-row-gap: 8px;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+.react-userRegisterForm-organization-myself-grid-format {
+	text-align: left;
+	margin-left: 45px;
+	margin-right: 0;
 }
